--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '0.12.613'
     ext.nucleus_version = '1.3.3'
     ext.retrofit_version = '1.9.0'
+    ext.androidapt_version = '1.4'
+    ext.dbflow_version = '2.2.1'
     repositories {
         mavenCentral()
         jcenter()
@@ -11,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.neenbedankt.gradle.plugins:android-apt:$androidapt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
