--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+    }
+
     defaultConfig {
         applicationId "com.aphoh.muser"
         minSdkVersion 16
@@ -63,7 +67,10 @@ dependencies {
     compile 'io.reactivex:rxkotlin:0.22.12'
     compile 'io.reactivex:rxandroid:0.25.0'
     compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
-
+    //Dependency Injection
+    compile "com.google.dagger:dagger:$dagger_version"
+    apt "com.google.dagger:dagger-compiler:$dagger_version"
+    compile 'org.glassfish:javax.annotation:10.0-b28'
 }
 
 jsonSchema2Pojo {
