--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.aphoh.muser">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="ANDROID.PERMISSION.WAKE_LOCK"/>
 
     <application
         android:name=".App"
@@ -12,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activitiy.MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
