--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     compile "com.google.dagger:dagger:$dagger_version"
     apt "com.google.dagger:dagger-compiler:$dagger_version"
     compile 'org.glassfish:javax.annotation:10.0-b28'
+
+    //Testing
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
 }
 
 jsonSchema2Pojo {
