--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,16 @@ buildscript {
     ext.retrofit_version = '1.9.0'
     ext.androidapt_version = '1.4'
     ext.dbflow_version = '2.2.1'
-    ext.android_version = '22.2.0'
+    ext.android_version = '22.2.1'
     ext.dagger_version = '2.0.1'
+    ext.androidgradle_version = '1.3.1'
     repositories {
         mavenCentral()
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath "com.android.tools.build:gradle:$androidgradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.neenbedankt.gradle.plugins:android-apt:$androidapt_version"
         // NOTE: Do not place your application dependencies here; they belong
