Move sc client id out of vc and into gradle.properties

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
         }
     }
     buildTypes {
+        all{
+            buildConfigField 'String', 'SC_CLIENT_ID', "\"$SC_CLIENT_ID\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
