--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '0.13.1514'
+    ext.kotlin_version = '1.0.0-beta-1103'
     ext.nucleus_version = '1.3.3'
     ext.retrofit_version = '1.9.0'
     ext.androidapt_version = '1.7'
