--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'jsonschema2pojo'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.trello.victor'
 
 buildscript {
     repositories {
@@ -15,9 +16,9 @@ buildscript {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LICENSE.txt'
     }
 
@@ -32,10 +33,11 @@ android {
         main {
             java.srcDirs += 'src/main/kotlin'
             //java.srcDirs += 'build/generated/source/apt/debug/com/raizlabs'
+            svg.srcDir '../imgres'
         }
     }
     buildTypes {
-        all{
+        all {
             buildConfigField 'String', 'SC_CLIENT_ID', "\"$SC_CLIENT_ID\""
         }
         release {
@@ -44,7 +46,7 @@ android {
         }
     }
 }
-repositories{
+repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
@@ -81,6 +83,14 @@ dependencies {
     //Testing
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.10.19"
+}
+
+victor {
+    // Any assets defined in relative terms needs a base DPI specified
+    svgDpi = 72
+
+    // Do not generate these densities for SVG assets
+    excludeDensities = ['ldpi', 'xxxhdpi']
 }
 
 jsonSchema2Pojo {
