--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     ext.dbflow_version = '2.2.1'
     ext.android_version = '23.0.1'
     ext.dagger_version = '2.0.1'
-    ext.androidgradle_version = '1.3.1'
+    ext.androidgradle_version = '2.0.0-alpha1'
     repositories {
         mavenCentral()
         jcenter()
@@ -17,6 +17,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$androidgradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.neenbedankt.gradle.plugins:android-apt:$androidapt_version"
+        classpath 'com.trello:victor:0.1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
