--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,10 @@ dependencies {
     compile "info.android15.nucleus:nucleus:$nucleus_version"
     compile "info.android15.nucleus:nucleus-support-v7:$nucleus_version"
     //UI Libs
-    compile 'me.grantland:autofittextview:0.2.+'
+    compile 'me.grantland:autofittextview:0.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'jp.wasabeef:recyclerview-animators:1.2.1@aar'
+    compile 'jp.wasabeef:recyclerview-animators:2.1.0'
+
     //Networking Libs
     compile "com.squareup.retrofit:retrofit:$retrofit_version"
     compile 'com.squareup.okhttp:okhttp:2.4.0'
