--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ android {
     sourceSets {
         main {
             java.srcDirs += 'src/main/kotlin'
-            //java.srcDirs += 'build/generated/source/apt/debug/com/raizlabs'
             svg.srcDir '../imgres'
         }
+        test.java.srcDirs += 'src/test/kotlin'
     }
     buildTypes {
         all {
@@ -87,7 +87,7 @@ dependencies {
 
     //Testing
     testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile 'org.assertj:assertj-core:1.7.1'
 }
 
 victor {
