--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.android_version = '23.1.1'
     ext.dagger_version = '2.0.1'
     ext.androidgradle_version = '2.0.0-alpha3'
+    ext.logansquare_version = '1.3.4'
     repositories {
         mavenCentral()
         jcenter()
