--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.0.0-beta-4584'
+    ext.kotlin_version = '1.0.0'
     ext.nucleus_version = '1.3.3'
     ext.retrofit_version = '1.9.0'
     ext.androidapt_version = '1.7'
     ext.android_version = '23.1.1'
     ext.dagger_version = '2.0.1'
-    ext.androidgradle_version = '2.0.0-alpha3'
+    ext.androidgradle_version = '2.0.0-beta6'
     ext.logansquare_version = '1.3.4'
     repositories {
         mavenCentral()
