--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     compile "info.android15.nucleus:nucleus:$nucleus_version"
     compile "info.android15.nucleus:nucleus-support-v7:$nucleus_version"
     //UI Libs
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+        transitive = true
+    }
     compile 'me.grantland:autofittextview:0.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:recyclerview-animators:2.1.0'
