--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = '1.0.2'
     ext.nucleus_version = '1.3.3'
     ext.retrofit_version = '1.9.0'
     ext.androidapt_version = '1.7'
     ext.android_version = '23.2.0'
     ext.dagger_version = '2.0.1'
-    ext.androidgradle_version = '2.0.0-beta6'
+    ext.androidgradle_version = '2.2.0-alpha3'
     ext.logansquare_version = '1.3.4'
     repositories {
         mavenCentral()
@@ -14,8 +14,8 @@ buildscript {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidgradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
         classpath "com.neenbedankt.gradle.plugins:android-apt:$androidapt_version"
         classpath 'com.trello:victor:0.1.5'
         // NOTE: Do not place your application dependencies here; they belong
