--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
             </intent-filter>
         </activity>
         <service android:name="com.aphoh.muser.music.MusicService"
-                android:exported="false">
+                 android:exported="true"
+                 android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON"/>
+                <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
         </service>
         <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
