--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "com.aphoh.muser"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1004
-        versionName "0.3.0-alpha"
+        versionCode 3001
+        versionName "1.0"
     }
     sourceSets {
         main {
