--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.0.2'
+    ext.kotlin_version = '1.1.51'
     ext.nucleus_version = '1.3.3'
     ext.retrofit_version = '1.9.0'
-    ext.androidapt_version = '1.7'
-    ext.android_version = '23.2.0'
-    ext.dagger_version = '2.0.1'
+    ext.android_version = '26.1.0'
+    ext.dagger_version = '2.13'
     ext.androidgradle_version = '2.2.0-alpha3'
     ext.logansquare_version = '1.3.4'
     repositories {
         mavenCentral()
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
-        classpath "com.neenbedankt.gradle.plugins:android-apt:$androidapt_version"
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha02'
         classpath 'com.trello:victor:0.1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,5 +30,9 @@ allprojects {
         maven { url "https://jitpack.io" }
         jcenter()
         mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
